# DailyStartupsBot

./: .gitignore  Makefile  README.md
backend/: .env.example  go.mod
backend/cmd/backend/: main.go  main_test.go
backend/internal/app/: app.go  app_test.go  dryrun.go  dryrun_test.go  scheduler.go  scheduler_test.go
backend/internal/config/: config.go  config_test.go
backend/internal/delivery/: delivery_test.go  queue.go  retry.go  schedule.go
backend/internal/digest/: digest_test.go  generator.go  localization.go  render.go  scoring.go  types.go
backend/internal/httpapi/: server.go  server_test.go
backend/internal/ingestion/: adapter.go  approved_sources.go  approved_sources_test.go  feed_adapter.go  feed_adapter_integration_test.go  feed_adapter_test.go  ingestion_test.go  (+9 more)
bot/: .env.example  pyproject.toml
bot/daily_startups_bot/: __init__.py  __main__.py  app.py  application.py  backend.py  checkpoint.py  commands.py  config.py  delivery_worker.py  events.py  metadata.py  polling.py  preferences.py  process_lock.py  telegram.py  telegram_metadata.ru.json
bot/tests/: test_app.py  test_application.py  test_backend.py  test_checkpoint.py  test_commands.py  test_config.py  test_delivery_worker.py  test_localization.py  test_metadata.py  test_polling.py  test_preferences.py  test_process_lock.py  test_telegram.py
docs/: localization.md  source-catalog.md
ops/launchd/: com.dailystartups.live.plist.example
scripts/: live.py  scheduled_telegram_e2e.py  telegram_e2e.py
scripts/tests/: test_live.py  test_scheduled_telegram_e2e.py  test_telegram_e2e.py
(+171 files in other folders)
