[project]
name = "daily-startups-bot"
version = "0.1.0"
description = "Telegram-facing service for DailyStartupsBot"
requires-python = ">=3.11"

[project.scripts]
daily-startups-bot = "daily_startups_bot.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
daily_startups_bot = ["telegram_metadata.ru.json"]
